--- a/0311_放狗茶會.md
+++ b/0311_放狗茶會.md
@@ -1,7 +1,7 @@
 ##### title: `放狗茶會`
 ##### date: ` 0311`
 -------------------------------------
-* 辦迎新？
-* 辦一個放狗回娘家？
-* 跟其他校內社團的合作？
-* 除了認識以前的人以外還可問什麼問題？
+# 辦迎新？
+原本是想要在這個學期辦一個迎新活動，但考慮到在下學期好像沒有什麼人在辦迎新，所以後來就想說改辦理社團學長姐回娘家。一開始預計要邀請還在學校裡面的，所以這些會有這些名單；後來，因為一些原因，所以也有邀請一些不在校內的學長姐。
+# 跟其他校內社團的合作？
+有一個想要跟學長姐聊聊的，是過往怎麼跟其他校內社團合作辦活動？
